manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: taskapi
  namespace: task-app
  labels:
    app: taskapi

spec:
  replicas: 3

  selector:
    matchLabels:
      app: taskapi

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: taskapi

    spec:
      containers:
        - name: taskapi
          image: mzoro15/taskapi:v1

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: taskapi
                topologyKey: kubernetes.io/hostname
