manifests/oom-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: oom-test
  namespace: task-app
spec:
  restartPolicy: Never
  containers:
    - name: oom-test
      image: python:3.11-slim
      command:
        - python3
        - -c
        - |
          x =' ' * (300 * 1024 * 1024)
          print("done")
      resources:
        requests:
          memory: "32Mi"
        limits:
          memory: "64Mi"
