manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskapi-service
  namespace: task-app
  labels:
    app: taskapi
    

spec:
  
  type: ClusterIP

  selector:
    app: taskapi

  ports:
    - name: http
      port: 80
      targetPort: 5000
